[tool.poetry]
name = "ahn_cli"
version = "0.1.8"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ahn_cli", from = "./" }]
include = [
  "ahn_cli/**/*.py",
  "ahn_cli/**/*.geojson",
  "README.md",
  "pyproject.toml",
  "LICENSE",
]

[tool.poetry.scripts]
ahn_cli = "ahn_cli.main:main"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
click = "^8.1.7"
geopandas = "^0.14.1"
shapely = "^2.0.2"
laspy = { extras = ["lazrs"], version = "^2.5.3" }
requests = "^2.31.0"
rasterio = "^1.3.9"
tqdm = "^4.66.2"
polyscope = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
isort = "^5.13.2"
flake8 = "^6.1.0"
types-requests = "^2.31.0.20240125"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.mypy]
files = ["ahn_cli/**/*.py"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_untyped_decorators = true
warn_unused_ignores = true
strict_optional = true
strict_param_types = true
warn_untyped_fields = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ahn_cli", "ahn_cli.*"]
